--- a/project.config.json
+++ b/project.config.json
@@ -28,7 +28,7 @@
 		"useCompilerModule": false,
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
-	"appid": "wx01e03c231dda5b46",
+	"appid": "wx19a2b8e370df0d65",
 	"projectname": "xiaopan",
 	"libVersion": "2.12.0",
 	"simulatorType": "wechat",
